fix writing of CSV file content to temp file by removing byte order mark id present. that lead to the fact that first column property could not be parsed correctly